# emcpp

./: CMakeLists.txt
lab1/: main.cpp
lab10/: ex_10_1_literals.cpp  ex_10_2_chrono.cpp  ex_10_3_regex.cpp  regex.txt
lab10/features/: regex.cpp
lab11/: TypeCheck.cpp  ex11_1_has_size.cpp  ex11_2_enable_if.cpp  ex11_3_tag_dispatching.cpp
lab12/: ex_12_3_promise_future.cpp  file1.txt  file2.txt  random.cpp
lab13/: ex1_RecurrentClasses.cpp  ex2_Expressions.cpp
lab2/: DynamicContainer.h  StaticContainer.h  StaticContainer2.h  String.h
lab3/: Printer.cpp  function_pointers.cpp  lambda_expressions.cpp
lab4/: ex_4_1_templates.cpp  ex_4_2_compare.cpp  ex_4_3_selectIf.cpp
lab5/: dynamicVector.h  ex1_Pair.cpp  ex2_staticVector.cpp  staticVector.h
lab6/: ex1_variadicFunctions.cpp  ex2_proxy.cpp  ex3_Mixins.cpp  ex4_MultiVector.cpp
lab7/: Matrix.h  Range.h  ex_7_3_MatrixIterator.cpp
lab8/: Vector.h  VectorPolicies.cpp  VectorTraits.cpp  VectorWithoutPolicies.h  ex_8_1_type_traits.cpp  ex_8_2_Vector_traits.cpp  ex_8_3_Vector_policies.cpp  ex_8_4_Vector_operators.cpp
lab9/: ex_9_1_stdalgorithms.cpp  ex_9_2_words.cpp  ex_9_3_Trie.cpp
